fix menu z-index

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -43,7 +43,12 @@ body {
   left: 1px;
   margin:  2rem;
   cursor: pointer;
-  z-index: 999999999999999999999999999;
+  z-index: 9;
+}
+
+
+.menu-button.close {
+  z-index: 999999;
 }
 
 ul {
